final note & disclaimer

--- a/submit.ipynb
+++ b/submit.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -389,9 +389,9 @@
     "print('The quantum solution:', state)\n",
     "print('>> fidelity:', get_fidelity(np.asarray(state), x_state_gt))\n",
     "\n",
-    "x_hat = postprocess(np.asarray(state))\n",
-    "print('The decoded algebraic solution:', x_hat)\n",
-    "print('>> L1 error:', get_L1_error(x_hat, x_gt))"
+    "x_hat_s = postprocess(np.asarray(state))\n",
+    "print('The decoded algebraic solution:', x_hat_s)\n",
+    "print('>> L1 error:', get_L1_error(x_hat_s, x_gt))"
    ]
   },
   {
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -427,9 +427,45 @@
     "print('The quantum solution (approx):', state_approx)\n",
     "print('>> fidelity:', get_fidelity(state_approx, x_state_gt))\n",
     "\n",
-    "x_hat = postprocess(state_approx)\n",
-    "print('The decoded algebraic solution:', x_hat)\n",
-    "print('>> L1 error:', get_L1_error(x_hat, x_gt))"
+    "x_hat_r = postprocess(state_approx)\n",
+    "print('The decoded algebraic solution:', x_hat_r)\n",
+    "print('>> L1 error:', get_L1_error(x_hat_r, x_gt))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "⚪ In the Context of the Problem\n",
+    "\n",
+    "Note that the raw numerical answer is rather dense (it is floating-point represented), however, we should descretize it if the problem has a discretized structure.  \n",
+    "For this concrete linear equation semantics, where **we know the solution should be all integers a priori**, we can just round it up to make the final answer zero-error :)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The final simulator solution: [12  5  3]\n",
+      ">> L1 error: 0.0\n",
+      "The final real-chip solution: [12  5  3]\n",
+      ">> L1 error: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_hat_s_i = x_hat_s.round().astype(np.int32)\n",
+    "x_hat_r_i = x_hat_r.round().astype(np.int32)\n",
+    "\n",
+    "print('The final simulator solution:', x_hat_s_i)\n",
+    "print('>> L1 error:', get_L1_error(x_hat_s_i, x_gt))\n",
+    "print('The final real-chip solution:', x_hat_r_i)\n",
+    "print('>> L1 error:', get_L1_error(x_hat_r_i, x_gt))"
    ]
   }
  ],
